[package]
name = "font-export"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8.20"
serde = { version = "1.0.219", features = ["derive"] } # 最新バージョンを確認
windows = { version = "0.58.0", features = [
    "Win32_Graphics_Gdi",
    "Win32_Foundation",
    "Win32_System_SystemServices", # GDI_ERRORのため
]}
thiserror = "2.0.12"
clap = { version = "4.5.34", features = ["derive"] } # clap を追加
